--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link href = "https://fonts.googleapis.com/css?family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono"
-    rel = "stylesheet"
+    <link 
+      href="https://fonts.googleapis.com/css?family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono"
+      rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>arav.shots</title>
